tests/NormalTests/paczka1/small_fuzzy/73858086.err
Error in line 6: S247 A189 2,5
Error in line 11: FdoRiR2m A189 90,8
